--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <h1>Hello, World!</h1>
     <div>My name is Joshua Padilla.</div>
     <div>My favorite hobby is running.</div>
+    <div>I also love to play guitar</div>
 </body>
 </html>
+
 
