--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
     <h1>Hello, World!</h1>
     <div>My name is Joshua Padilla.</div>
     <div>My favorite hobby is running.</div>
-    <div>I also love to play guitar</div>
+    <div>My favorite food is Meixcan food.</div>
 </body>
 </html>
+
 
 
