--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
     <h1>Hello, World!</h1>
     <div>My name is Joshua Padilla.</div>
     <div>My favorite hobby is running.</div>
+    <div>My favorite game is Dead Space.</div>
 </body>
 </html>
+
 
 
 
